syntax = "proto3";
package jsonmultiplex.iam.v0;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service IAM {
  rpc CreateAccount(CreateAccountRequest) returns (Account) {
    option (google.api.http) = {
      post: "/v0/accounts"
      body: "account"
    };
  }

  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {
    option (google.api.http) = {
      get: "/v0/users"
    };
  }

  rpc GetUser(GetUserRequest) returns (User) {
    option (google.api.http) = {
      get: "/v0/{name=users/*}"
    };
  }

  rpc CreateUser(CreateUserRequest) returns (User) {
    option (google.api.http) = {
      post: "/v0/users"
      body: "user"
    };
  }

  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v0/{name=users/*}"
    };
  }

  rpc ListAccessKeys(ListAccessKeysRequest) returns (ListAccessKeysResponse) {
    option (google.api.http) = {
      get: "/v0/{parent=users/*}/accessKeys"
    };
  }

  rpc GetAccessKey(GetAccessKeyRequest) returns (AccessKey) {
    option (google.api.http) = {
      get: "/v0/{name=users/*/accessKeys/*}"
    };
  }

  rpc CreateAccessKey(CreateAccessKeyRequest) returns (AccessKey) {
    option (google.api.http) = {
      post: "/v0/{parent=users/*}/accessKeys"
      body: "access_key"
    };
  }

  rpc DeleteAccessKey(DeleteAccessKeyRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v0/{name=users/*/accessKeys/*}"
    };
  }

  rpc ListIdentityProviders(ListIdentityProvidersRequest) returns (ListIdentityProvidersResponse) {
    option (google.api.http) = {
      get: "/v0/identityProviders"
    };
  }

  rpc GetIdentityProvider(GetIdentityProviderRequest) returns (IdentityProvider) {
    option (google.api.http) = {
      get: "/v0/{name=identityProviders/*}"
    };
  }

  rpc CreateIdentityProvider(CreateIdentityProviderRequest) returns (IdentityProvider) {
    option (google.api.http) = {
      post: "/v0/IdentityProviders"
      body: "identityProvider"
    };
  }

  rpc DeleteIdentityProvider(DeleteIdentityProviderRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v0/{name=identityProviders/*}"
    };
  }

  rpc ListSamlUsers(ListSamlUsersRequest) returns (ListSamlUsersResponse) {
    option (google.api.http) = {
      get: "/v0/{parent=identityProviders/*}/samlUsers"
    };
  }

  rpc GetSamlUser(GetSamlUserRequest) returns (SamlUser) {
    option (google.api.http) = {
      get: "/v0/{name=identityProviders/*/samlUsers/*}"
    };
  }

  rpc CreateSamlUser(CreateSamlUserRequest) returns (SamlUser) {
    option (google.api.http) = {
      post: "/v0/{parent=identityProviders/*}/samlUsers"
      body: "saml_user"
    };
  }

  rpc DeleteSamlUser(DeleteSamlUserRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v0/{name=identityProviders/*/samlUsers/*}"
    };
  }

  rpc CreateSession(CreateSessionRequest) returns (Session) {
    option (google.api.http) = {
      post: "/v0/sessions"
      body: "session"
    };
  }
}

message Account {
  string name = 1;
  google.protobuf.Timestamp create_time = 2;
  google.protobuf.Timestamp update_time = 3;
  google.protobuf.Timestamp delete_time = 4;

  // Write-only field, required only for CreateAccount. Never returned to the
  // client.
  string root_password = 5;
}

message User {
  string name = 1;
  google.protobuf.Timestamp create_time = 2;
  google.protobuf.Timestamp update_time = 3;
  google.protobuf.Timestamp delete_time = 4;

  // Write-only field, required only for CreateUser and optional for UpdateUser.
  // Never returned to the client.
  string password = 5;
}

message AccessKey {
  string name = 1;
  google.protobuf.Timestamp create_time = 2;
  google.protobuf.Timestamp update_time = 3;
  google.protobuf.Timestamp delete_time = 4;

  // Read-only field, returned only from CreateAccessKey.
  string secret = 5;
}

message IdentityProvider {
  string name = 1;
  google.protobuf.Timestamp create_time = 2;
  google.protobuf.Timestamp update_time = 3;
  google.protobuf.Timestamp delete_time = 4;

  string saml_metadata_url = 5;
  string user_id_attribute = 6;
}

message SamlUser {
  string name = 1;
  google.protobuf.Timestamp create_time = 2;
  google.protobuf.Timestamp update_time = 3;
}

message Session {
  string name = 1;
  google.protobuf.Timestamp create_time = 2;
  google.protobuf.Timestamp expire_time = 3;
  string account = 4;
  string subject = 5;

  // Write-only field, required only for CreateSession. Never returned to the
  // client.
  string secret = 6;

  // Read-only field, returned only from CreateSession.
  string token = 7;
}

message CreateAccountRequest {
  Account account = 1;
}

message ListUsersRequest {}

message ListUsersResponse {
  repeated User users = 1;
}

message GetUserRequest {
  string name = 1;
}

message CreateUserRequest {
  User user = 1;
}

message DeleteUserRequest {
  string name = 1;
}

message ListAccessKeysRequest {
  string parent = 1;
}

message ListAccessKeysResponse {
  repeated AccessKey access_keys = 1;
}

message GetAccessKeyRequest {
  string name = 1;
}

message CreateAccessKeyRequest {
  string parent = 1;
  string access_key_id = 2;
  AccessKey access_key = 3;
}

message DeleteAccessKeyRequest {
  string name = 1;
}

message ListIdentityProvidersRequest {}

message ListIdentityProvidersResponse {
  repeated IdentityProvider identity_providers = 1;
}

message GetIdentityProviderRequest {
  string name = 1;
}

message CreateIdentityProviderRequest {
  IdentityProvider identity_provider = 1;
}

message DeleteIdentityProviderRequest {
  string name = 1;
}

message ListSamlUsersRequest {
  string parent = 1;
}

message ListSamlUsersResponse {
  repeated SamlUser saml_users = 1;
}

message GetSamlUserRequest {
  string name = 1;
}

message CreateSamlUserRequest {
  string parent = 1;
  string saml_user_id = 2;
  SamlUser saml_user = 3;
}

message DeleteSamlUserRequest {
  string name = 1;
}

message CreateSessionRequest {
  Session session = 1;
}